--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://thaddaeusynw.netlify.app">Thaddaeus Otieno</a>.
+      >. Coded by <a href="https://qrcoode.netlify.app">Thaddaeus Otieno</a>.
     </div>
   </body>
 </html>
